--- a/client/views/layouts/help_confirm/help_confirm.html
+++ b/client/views/layouts/help_confirm/help_confirm.html
@@ -1,10 +1,10 @@
 <template name="help_confirm">
-        
+
             <h4>
                 <div class="alert alert-danger" role="alert">ARE YOU SURE YOU WANT TO SEND A HELP SIGNAL?</div>
             </h4>
             <div>
-                If you confirm help sms's will be sent to: 
+                If you confirm help sms's will be sent to:
                 <ul>
                     <li>
                         BeagleWatch control room
@@ -21,7 +21,8 @@
                     <li>
                         Whomever else is subscribed to the KRF alert system.
                     </li>
-                </ul> 
-                        <a class="btn btn-help btn-block btn-dynamic-props " id="helpConfirmButton" href="/help_chat_main">YES HELP!</a>         <a class="btn btn-cancel btn-block btn-dynamic-props "  href="/">CANCEL</a>
+                </ul>
+                        <a class="btn btn-help btn-block btn-dynamic-props " id="helpConfirmButton" href="/help_chat_main">YES HELP!</a>
+                        <a class="btn btn-cancel btn-block btn-dynamic-props "  href="/alert_buttons">CANCEL</a>
             </div>
 </template>
