--- a/client/views/layouts/master_layout/master_layout.html
+++ b/client/views/layouts/master_layout/master_layout.html
@@ -1,37 +1,38 @@
-<template name="MasterLayout">
-    <div class="container header_Format container-fluid">
-        <div class="login">
-            {{>header}}
-        </div>    
-            {{>navButtons}}
-        {{#if currentUser}}
-            {{> yield}}
-        {{/if}}
+<template name="master_layout">
+  <div class="container header_Format container-fluid">
+    <div class="login">
+      {{>header}}
     </div>
+      {{#if currentUser}}
+        {{>nav_buttons}}
+        {{>yield}}
+      {{/if}}
+  </div>
 </template>
-<template name="navButtons">
-    <div style="text-align:center">
-        <a class="btn btnNav"  href="/">Alert Buttons</a>
-        <a class="btn btnNav"  href="/chat_active_list">Active Chats</a>
-        <a class="btn btnNav"  href="/chat_old_list">Old Chats</a>
-    </div>
+<template name="nav_buttons">
+  <div style="text-align:center">
+    <a class="btn btnNav" id="TEST" href="/alert_buttons">Alert Buttons</a>
+    <a class="btn btnNav"  href="/chat_active_list">Active Chats</a>
+    <a class="btn btnNav"  href="/chat_old_list">Old Chats</a>
+  </div>
 </template>
 <template name="header">
-    <div class="navbar">
-        <div class="navbar-inner"> 
-            <div class="container">
-                 <div style="text-align:center">
-                    <FORM class="resfreshBtn">
-                        <INPUT TYPE="button" onClick="history.go(0)" VALUE="Refresh Me">
-                    </FORM>     
-                   <div>KLOOFENDAL RESIDENTS ALERT</div> 
-                    {{>loginButtons}}
-                    {{#if currentUser}}
-                    {{else}}
-                        PLEASE LOG IN
-                    {{/if}}
-                </div>
-            </div>
+  <div class="navbar">
+    <div class="navbar-inner">
+      <div class="container">
+         <div style="text-align:center">
+          <FORM class="resfreshBtn">
+            <INPUT TYPE="button" onClick="history.go(0)" VALUE="Refresh Me">
+          </FORM>
+           <div>KLOOFENDAL RESIDENTS ALERT</div>
+          {{>loginButtons}}
+          {{#if currentUser}}
+
+          {{else}}
+            PLEASE LOG IN
+          {{/if}}
         </div>
+      </div>
     </div>
+  </div>
 </template>
