Commit before moving to Pierre Mac

--- a/client/views/layouts/help_confirm/help_confirm.html
+++ b/client/views/layouts/help_confirm/help_confirm.html
@@ -10,16 +10,13 @@
                         BeagleWatch control room
                     </li>
                     <li>
-                        BeagleWatch foot patrol
+                        Sector Police
                     </li>
                     <li>
                         BeagleWatch dedicated vehicle
                     </li>
                     <li>
-                        KloofEnDal Forum committee
-                    </li>
-                    <li>
-                        Whomever else is subscribed to the KRF alert system.
+                        Whomever else is nominated by you (preferably your neighbours).
                     </li>
                 </ul>
                         <a class="btn btn-help btn-block btn-dynamic-props " id="helpConfirmButton" href="/help_chat_main">YES HELP!</a>
