--- a/client/views/layouts/master_layout/master_layout.html
+++ b/client/views/layouts/master_layout/master_layout.html
@@ -21,9 +21,10 @@
     <div class="navbar-inner">
       <div class="container">
          <div style="text-align:center">
-          <FORM class="resfreshBtn">
-            <INPUT TYPE="button" onClick="history.go(0)" VALUE="Refresh Me">
-          </FORM>
+    <!--           <FORM class="resfreshBtn">
+           <INPUT TYPE="button" onClick="history.go(0)" VALUE="Refresh Me">
+          </FORM> -->
+          <h4> TEST SYSTEM </h4>
            <div>KLOOFENDAL RESIDENTS ALERT</div>
           {{>loginButtons}}
           {{#if currentUser}}
